<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfile">
    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/profileTitle" />
    <TextView
        android:id="@+id/profileTName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/nameTitle" />
    <TextView
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/nameTitle" />
    <TextView
        android:id="@+id/profileTFLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/fLastNameTitle" />
    <TextView
        android:id="@+id/profileFLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/fLastNameTitle" />
    <TextView
        android:id="@+id/profileTSLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/sLastNameTitle" />
    <TextView
        android:id="@+id/profileSLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="15dp"
        android:text="@string/sLastNameTitle" />
    <TextView
        android:id="@+id/profileTEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/emailTitle" />
    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/emailTitle" />
    <TextView
        android:id="@+id/profileTContinent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/continentTitle" />
    <TextView
        android:id="@+id/profileContinent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/continentTitle" />
    <TextView
        android:id="@+id/profileTCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/countryTitle" />
    <TextView
        android:id="@+id/profileCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/countryTitle" />
    <TextView
        android:id="@+id/profileTAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/addressTitle" />
    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/addressTitle" />
    <Button
        android:id="@+id/manageDevbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/goMain" />
</LinearLayout>