<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".administration.RegisterDevice">


    <TextView
        android:id="@+id/deviceTSerial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/serialDevice"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/deviceSerial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/serialDevice"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/deviceTBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/brandDevice"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/deviceBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/brandDevice"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/deviceTType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/typeDevice"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/deviceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/typeDevice"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/deviceTConsume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/consumeDevice"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/deviceConsume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/consumeDevice"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/deviceTDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/descriptionDevice"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/deviceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/descriptionDevice"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/deviceTRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/nameRoom"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinnerRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="10dp" />

    <Button
        android:id="@+id/addDeviceBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/registerDevice" />
</LinearLayout>