<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">
    <EditText
        android:id="@+id/loginUserID"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:hint="@string/userID"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>/>
    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"/>/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/login" />
</LinearLayout>